--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <li><a href="./pages/aboutMe.html"><span>#</span>about-me</a></li>
                     <li><a href="index.html#contact"><span>#</span>contacts</a></li>
                     <div class="button">
-                        <a href="./cv.pdf" download>download cv!</a>
+                        <a href="./cv.pdf">download cv!</a>
                     </div>
                 </ul>
             </div>
