--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
     </style>
 </head>
 <body>
+    <div id="cursor" class="cursor">
+        <div class="ring">
+            <div></div>
+        </div>
+        <div class="ring">
+            <div></div>
+        </div>
+    </div>
     <nav>
         <div class="hambergurMenuActive">
             <div class="top">
@@ -28,7 +36,7 @@
                     <li><a href="./pages/aboutMe.html"><span>#</span>about-me</a></li>
                     <li><a href="index.html#contact"><span>#</span>contacts</a></li>
                     <div class="button">
-                        <a href="./cv.pdf">download cv!</a>
+                        <a href="./cv.pdf" download>download cv!</a>
                     </div>
                 </ul>
             </div>
