--- a/pages/aboutMe.html
+++ b/pages/aboutMe.html
@@ -16,6 +16,14 @@
     </style>
 </head>
 <body>
+    <div id="cursor" class="cursor">
+        <div class="ring">
+            <div></div>
+        </div>
+        <div class="ring">
+            <div></div>
+        </div>
+    </div>
     <div class="sidebar">
         <hr>
         <div class="icons">
