--- a/pages/projects.html
+++ b/pages/projects.html
@@ -11,6 +11,14 @@
     <link rel="shortcut icon" href="../imgs/favicon.ico" type="image/x-icon">
 </head>
 <body>
+    <div id="cursor" class="cursor">
+        <div class="ring">
+            <div></div>
+        </div>
+        <div class="ring">
+            <div></div>
+        </div>
+    </div>
     <div class="sidebar">
         <hr>
         <div class="icons">
@@ -93,12 +101,12 @@
         </div>
     </nav>
     <div class="projectsPage">
-        <div class="title">
+        <div class="pp title">
             <h1><span>/</span>projects</h1>
             <p>List of my projects</p>
         </div>
         <div class="completeSites">
-            <div class="top">
+            <div class="cs top">
                 <h1><span>#</span>complete-sites</h1>
             </div>
             <div class="bottom">
