--- a/pages/projects.html
+++ b/pages/projects.html
@@ -115,18 +115,18 @@
                         <img src="../imgs/projectImg.jpeg" alt="Project Img" width="100%" loading="lazy">
                     </div>
                     <div class="center">
-                        <p>Html SCSS Python Flask</p>
+                        <p>Html CSS Js React SCSS</p>
                     </div>
                     <div class="bottom">
                         <div class="title">
-                            <h2>ChertNodes</h2>
+                            <h2>Najot Talim Musobaqa</h2>
                         </div>
                         <div class="content">
-                            <p>Mincraft servers hosting</p>
+                            <p>"Najot talim" o'quv markazidagi musobaqa uchun, Jamoaviy</p>
                         </div>
                         <div class="buttons">
-                            <a href="#">Live <~></a>
-                            <a href="#">Github >=</a>
+                            <!-- <a href="#">Live <~></a> -->
+                            <a href="https://github.com/PR09RAMM3R/NajotTalimMusobaqa">Github >=</a>
                         </div>
                     </div>
                 </div>
@@ -135,18 +135,18 @@
                         <img src="../imgs/projectImg.jpeg" alt="Project Img" width="100%" loading="lazy">
                     </div>
                     <div class="center">
-                        <p>Html SCSS Python Flask</p>
+                        <p>Html CSS Js PHP Laravel MySQL</p>
                     </div>
                     <div class="bottom">
                         <div class="title">
-                            <h2>ChertNodes</h2>
+                            <h2>Klinika</h2>
                         </div>
                         <div class="content">
-                            <p>Mincraft servers hosting</p>
+                            <p>Klinika uchun sayt full-stack (Portfolio uchun)</p>
                         </div>
                         <div class="buttons">
-                            <a href="#">Live <~></a>
-                            <a href="#">Github >=</a>
+                            <!-- <a href="#">Live <~></a> -->
+                            <a href="https://github.com/PR09RAMM3R/clinicSiteFullStack">Github >=</a>
                         </div>
                     </div>
                 </div>
@@ -155,18 +155,18 @@
                         <img src="../imgs/projectImg.jpeg" alt="Project Img" width="100%" loading="lazy">
                     </div>
                     <div class="center">
-                        <p>Html SCSS Python Flask</p>
+                        <p>Html CSS Js SCSS</p>
                     </div>
                     <div class="bottom">
                         <div class="title">
-                            <h2>ChertNodes</h2>
+                            <h2>Tozalash xizmati</h2>
                         </div>
                         <div class="content">
-                            <p>Mincraft servers hosting</p>
+                            <p>Tozalash hizmati uchun qilingan saytning frontend qismi, Jamoaviy (portfolio uchun)</p>
                         </div>
                         <div class="buttons">
-                            <a href="#">Live <~></a>
-                            <a href="#">Github >=</a>
+                            <a href="https://homecleaning-az.netlify.app/">Live <~></a>
+                            <a href="https://github.com/newNASA/homecleaning">Github >=</a>
                         </div>
                     </div>
                 </div>
@@ -175,43 +175,25 @@
                         <img src="../imgs/projectImg.jpeg" alt="Project Img" width="100%" loading="lazy">
                     </div>
                     <div class="center">
-                        <p>Html SCSS Python Flask</p>
+                        <p>Html SCSS CSS Js</p>
                     </div>
                     <div class="bottom">
                         <div class="title">
-                            <h2>ChertNodes</h2>
+                            <h2>Book Store</h2>
                         </div>
                         <div class="content">
-                            <p>Mincraft servers hosting</p>
+                            <p>Najot ta'limda hackatonda berilgan project. Jamoaviy</p>
                         </div>
                         <div class="buttons">
-                            <a href="#">Live <~></a>
-                            <a href="#">Github >=</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="card" data-aos="fade-up" data-aos-delay="500">
-                    <div class="top">
-                        <img src="../imgs/projectImg.jpeg" alt="Project Img" width="100%" loading="lazy">
-                    </div>
-                    <div class="center">
-                        <p>Html SCSS Python Flask</p>
-                    </div>
-                    <div class="bottom">
-                        <div class="title">
-                            <h2>ChertNodes</h2>
-                        </div>
-                        <div class="content">
-                            <p>Mincraft servers hosting</p>
-                        </div>
-                        <div class="buttons">
-                            <a href="#">Live <~></a>
-                            <a href="#">Github >=</a>
+                            <a href="https://badiiyat.netlify.app/">Live <~></a>
+                            <a href="https://github.com/newNASA/bookstore">Github >=</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+
+
         <div class="smallProjects">
             <div class="top">
                 <h1><span>#</span>small-projects</h1>
@@ -219,35 +201,35 @@
             <div class="bottom">
                 <div class="card" data-aos="fade-up" data-aos-delay="100">
                     <div class="center">
-                        <p>Html SCSS Python Flask</p>
+                        <p>Html Css</p>
                     </div>
                     <div class="bottom">
                         <div class="title">
-                            <h2>ChertNodes</h2>
+                            <h2>light-night-button</h2>
                         </div>
                         <div class="content">
-                            <p>Mincraft servers hosting</p>
+                            <p>light-night button</p>
                         </div>
                         <div class="buttons">
-                            <a href="#">Live <~></a>
-                            <a href="#">Github >=</a>
+                            <a href="https://pr09ramm3r.github.io/light-night-button/">Live <~></a>
+                            <a href="https://github.com/PR09RAMM3R/light-night-button">Github >=</a>
                         </div>
                     </div>
                 </div>
                 <div class="card" data-aos="fade-up" data-aos-delay="200">
                     <div class="center">
-                        <p>Html SCSS Python Flask</p>
+                        <p>Html CSS Js Impress.js</p>
                     </div>
                     <div class="bottom">
                         <div class="title">
-                            <h2>ChertNodes</h2>
+                            <h2>Impress test</h2>
                         </div>
                         <div class="content">
-                            <p>Mincraft servers hosting</p>
+                            <p>Impress.js da test uchun qilingan sayt</p>
                         </div>
                         <div class="buttons">
-                            <a href="#">Live <~></a>
-                            <a href="#">Github >=</a>
+                            <a href="https://pr09ramm3r.github.io/impress.js">Live <~></a>
+                            <a href="https://github.com/PR09RAMM3R/impress.js">Github >=</a>
                         </div>
                     </div>
                 </div>
@@ -263,42 +245,8 @@
                             <p>Mincraft servers hosting</p>
                         </div>
                         <div class="buttons">
-                            <a href="#">Live <~></a>
-                            <a href="#">Github >=</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="card" data-aos="fade-up" data-aos-delay="400">
-                    <div class="center">
-                        <p>Html SCSS Python Flask</p>
-                    </div>
-                    <div class="bottom">
-                        <div class="title">
-                            <h2>ChertNodes</h2>
-                        </div>
-                        <div class="content">
-                            <p>Mincraft servers hosting</p>
-                        </div>
-                        <div class="buttons">
-                            <a href="#">Live <~></a>
-                            <a href="#">Github >=</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="card" data-aos="fade-up" data-aos-delay="500">
-                    <div class="center">
-                        <p>Html SCSS Python Flask</p>
-                    </div>
-                    <div class="bottom">
-                        <div class="title">
-                            <h2>ChertNodes</h2>
-                        </div>
-                        <div class="content">
-                            <p>Mincraft servers hosting</p>
-                        </div>
-                        <div class="buttons">
-                            <a href="#">Live <~></a>
-                            <a href="#">Github >=</a>
+                            <a href="https://pr09ramm3r.github.io/CursorAnimation/">Live <~></a>
+                            <a href="https://github.com/PR09RAMM3R/CursorAnimation">Github >=</a>
                         </div>
                     </div>
                 </div>
