--- a/pages/projects.html
+++ b/pages/projects.html
@@ -235,14 +235,14 @@
                 </div>
                 <div class="card" data-aos="fade-up" data-aos-delay="300">
                     <div class="center">
-                        <p>Html SCSS Python Flask</p>
+                        <p>Html CSS Js</p>
                     </div>
                     <div class="bottom">
                         <div class="title">
-                            <h2>ChertNodes</h2>
+                            <h2>Cursor Animation</h2>
                         </div>
                         <div class="content">
-                            <p>Mincraft servers hosting</p>
+                            <p>Cursor animation</p>
                         </div>
                         <div class="buttons">
                             <a href="https://pr09ramm3r.github.io/CursorAnimation/">Live <~></a>
