--- a/index.html
+++ b/index.html
@@ -140,64 +140,68 @@
                 </div>
             </div>
             <div class="bottom">
-                <div class="card" data-aos="fade-up">
+
+                <div class="card" data-aos="fade-up" data-aos-delay="100">
                     <div class="top">
-                        <img src="./imgs/projectImg.jpeg" alt="Project Img" width="100%" loading="lazy">
+                        <img src="../imgs/projectImg.jpeg" alt="Project Img" width="100%" loading="lazy">
                     </div>
                     <div class="center">
-                        <p>Html SCSS Python Flask</p>
+                        <p>Html CSS Js React SCSS</p>
                     </div>
                     <div class="bottom">
                         <div class="title">
-                            <h2>ChertNodes</h2>
+                            <h2>Najot Talim Musobaqa</h2>
                         </div>
                         <div class="content">
-                            <p>Mincraft servers hosting</p>
+                            <p>"Najot talim" o'quv markazidagi musobaqa uchun, Jamoaviy</p>
                         </div>
                         <div class="buttons">
-                            <a href="#">Live <~></a>
-                            <a href="#">Github >=</a>
+                            <!-- <a href="#">Live <~></a> -->
+                            <a href="https://github.com/PR09RAMM3R/NajotTalimMusobaqa">Github >=</a>
                         </div>
                     </div>
                 </div>
-                <div class="card" data-aos="fade-up" data-aos-delay="150">
+                <div class="card" data-aos="fade-up" data-aos-delay="200">
                     <div class="top">
-                        <img src="./imgs/projectImg1.png" alt="Project Img" width="100%" loading="lazy">
+                        <img src="../imgs/projectImg.jpeg" alt="Project Img" width="100%" loading="lazy">
                     </div>
                     <div class="center">
-                        <p>React Express Discord.js Node.js HTML SCSS Python Flask</p>
+                        <p>Html CSS Js PHP Laravel MySQL</p>
                     </div>
                     <div class="bottom">
                         <div class="title">
-                            <h2>ProtectX</h2>
+                            <h2>Klinika</h2>
                         </div>
                         <div class="content">
-                            <p>Discord anti-crash bot</p>
+                            <p>Klinika uchun sayt full-stack (Portfolio uchun)</p>
                         </div>
                         <div class="buttons">
-                            <a href="#">Live <~></a>
+                            <!-- <a href="#">Live <~></a> -->
+                            <a href="https://github.com/PR09RAMM3R/clinicSiteFullStack">Github >=</a>
                         </div>
                     </div>
                 </div>
                 <div class="card" data-aos="fade-up" data-aos-delay="300">
                     <div class="top">
-                        <img src="./imgs/projectImg2.png" alt="Project Img" width="100%" loading="lazy">
+                        <img src="../imgs/projectImg.jpeg" alt="Project Img" width="100%" loading="lazy">
                     </div>
                     <div class="center">
-                        <p>CSS Express Node.js</p>
+                        <p>Html CSS Js SCSS</p>
                     </div>
                     <div class="bottom">
                         <div class="title">
-                            <h2>Kahoot Answers Viewer</h2>
+                            <h2>Tozalash xizmati</h2>
                         </div>
                         <div class="content">
-                            <p>Get answers to your kahoot quiz</p>
+                            <p>Tozalash hizmati uchun qilingan saytning frontend qismi, Jamoaviy (portfolio uchun)</p>
                         </div>
                         <div class="buttons">
-                            <a href="#">Live <~></a>
+                            <a href="https://homecleaning-az.netlify.app/">Live <~></a>
+                            <a href="https://github.com/newNASA/homecleaning">Github >=</a>
                         </div>
                     </div>
                 </div>
+
             </div>
         </div>
         <div class="skills">
@@ -275,7 +279,7 @@
                                 </svg>
                                 asadbekahadov00@gmail.com
                             </a>
-                            <a href="https://t.me/ful_stack_dev">
+                            <a href="https://t.me/pl4yerunkn0wn">
                                 <svg width="28px" height="28px" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" fill="#ABB2BF">
                                     <path d="M29.919 6.163l-4.225 19.925c-0.319 1.406-1.15 1.756-2.331 1.094l-6.438-4.744-3.106 2.988c-0.344 0.344-0.631 0.631-1.294 0.631l0.463-6.556 11.931-10.781c0.519-0.462-0.113-0.719-0.806-0.256l-14.75 9.288-6.35-1.988c-1.381-0.431-1.406-1.381 0.288-2.044l24.837-9.569c1.15-0.431 2.156 0.256 1.781 2.013z"/>
                                 </svg>
