--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
                 <div class="card" data-aos="fade-up" data-aos-delay="100">
                     <div class="top">
-                        <img src="../imgs/projectImg.jpeg" alt="Project Img" width="100%" loading="lazy">
+                        <img src="./imgs/projectImg.jpeg" alt="Project Img" width="100%" loading="lazy">
                     </div>
                     <div class="center">
                         <p>Html CSS Js React SCSS</p>
@@ -163,7 +163,7 @@
                 </div>
                 <div class="card" data-aos="fade-up" data-aos-delay="200">
                     <div class="top">
-                        <img src="../imgs/projectImg.jpeg" alt="Project Img" width="100%" loading="lazy">
+                        <img src="./imgs/projectImg.jpeg" alt="Project Img" width="100%" loading="lazy">
                     </div>
                     <div class="center">
                         <p>Html CSS Js PHP Laravel MySQL</p>
@@ -183,7 +183,7 @@
                 </div>
                 <div class="card" data-aos="fade-up" data-aos-delay="300">
                     <div class="top">
-                        <img src="../imgs/projectImg.jpeg" alt="Project Img" width="100%" loading="lazy">
+                        <img src="./imgs/projectImg.jpeg" alt="Project Img" width="100%" loading="lazy">
                     </div>
                     <div class="center">
                         <p>Html CSS Js SCSS</p>
